refactor: day 06 (class)